deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
      - name: demoapp
        image: aimvector/kube-demo:go-1.9-v1
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 1
            memory: 1G
          limits:
            cpu: 1
            memory: 1G
